Minor cleanup